Update jvm config to 354